# nba-analytics

./: .gitignore  LICENSE  Makefile  README.md  build.py  cleanup_testing.ipynb  combine_stats_trimmed.csv  data_cleaning.ipynb  environment.yml  main.py  pyproject.toml  requirements.txt  selenium-stathead-scraping.py
.streamlit/: config.toml
data/: NBA_combine_stats_2000-2024.csv
data/interim/: NBA_team_player_stats.csv  NBA_team_player_stats_WA_current_year.csv  NBA_team_player_stats_Weight_Average.csv  NBA_team_player_stats_Year_Adjusted.csv  all_player_stats_00-24.csv  allstar_stats_00-24.csv  college_player_stats_00-24.csv  draft_prospects.csv  prospect_stats_w_Intl.csv  rookie_player_comps.json  rookie_projection_stats.csv  team_stats_clean.csv  top_test_team.csv
data/processed/: all_stars_scaled.csv  draft_prospects.csv  prospect_stats_w_intl.csv  rookie_projection_stats.csv  rookie_stats.csv  rookie_stats_scaled.csv  roster_stats_2024.csv  roster_win%.csv  team_abbr_mapping.json
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
models/: player_pca.pkl  win_prediction.pkl
nba_analytics/data/: clean.py  scrape-combine.py  scrape.py  (+1 more)
notebooks/: KNN.ipynb  college_player_comps_NC.ipynb  combine_player_nn_search_NC.ipynb  data_cleaning.ipynb  kaggle_data_eda.ipynb  nba_api.ipynb  player_cluster_analysis.ipynb  team_winning_prediction.ipynb  team_winning_prediction_cleaned.ipynb  team_wins_prediction_SD.ipynb  team_wins_prediction_weight_average.ipynb  test.ipynb  win_perc_modeling_NC.ipynb  win_prediction_testing.ipynb
references/: Glossary.md
(+9 files in other folders)
