[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nba_analytics"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Nicholas Cantalupa, Sean Duffy, Aditya Saxena, Pazin Tarasansombat" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.8.19"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["nba_analytics"]
force_sort_within_sections = true
